# livraria

./: db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_livro_capa.py  0002_remove_categoria_descricao.py  0003_autor_email_alter_autor_dtnasc.py  0003_rename_descricao_editora_nome.py  0004_rename_nome_categoria_descricao.py
livraria/: settings.py  urls.py
